--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,6 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 aiosmtplib==3.0.1
 jinja2==3.1.2
+# Blockchain verification libraries
+tronpy==0.4.0
+web3==6.15.1
