--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,174 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-asyncpg==0.29.0
-aiosqlite==0.19.0
-alembic==1.12.1
-redis==5.0.1
-celery==5.3.4
-# JWT handling - NOTE: Use python-jose, NOT jose (which is Python 2 only)
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-httpx==0.25.2
-websockets==12.0
-bcrypt==4.1.2
-email-validator==2.1.0
-pytest==7.4.3
-pytest-asyncio==0.21.1
-aiosmtplib==3.0.1
-jinja2==3.1.2
-# Blockchain verification libraries
+aiohappyeyeballs==2.5.0
+aiohttp==3.11.13
+aiosignal==1.3.2
+aiosmtplib==4.0.1
+aiosqlite==0.21.0
+annotated-types==0.7.0
+anyio==4.9.0
+args==0.1.0
+attrs==25.1.0
+base58==2.1.1
+bcrypt==4.3.0
+bitarray==3.4.3
+cachetools==5.5.2
+certifi==2025.6.15
+cffi==1.17.1
+charset-normalizer==3.4.1
+ckzg==1.0.2
+click==8.1.8
+clint==0.5.1
+coincurve==21.0.0
+colorama==0.4.6
+cryptography==44.0.2
+cytoolz==1.0.1
+dataclasses-json==0.6.7
+dnspython==2.7.0
+dotenv==0.9.9
+ecdsa==0.19.1
+email_validator==2.2.0
+et_xmlfile==2.0.0
+eth-abi==4.2.1
+eth-account==0.11.3
+eth-hash==0.7.1
+eth-keyfile==0.9.1
+eth-keys==0.7.0
+eth-rlp==1.0.1
+eth-typing==5.2.1
+eth-utils==5.3.0
+eval_type_backport==0.2.2
+Faker==37.1.0
+fastapi==0.115.11
+filelock==3.17.0
+filetype==1.2.0
+frozenlist==1.5.0
+fsspec==2025.3.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.163.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.69.1
+greenlet==3.1.1
+grpcio==1.71.0
+grpcio-status==1.71.0
+h11==0.16.0
+hexbytes==0.3.1
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.29.3
+idna==3.10
+Jinja2==3.1.6
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+langchain==0.3.20
+langchain-community==0.3.19
+langchain-core==0.3.43
+langchain-google-genai==2.0.11
+langchain-text-splitters==0.3.6
+langsmith==0.3.13
+# Editable install with no version control (loopcod==2.0.0)
+-e /Users/nizam/Documents/loopcod
+lru-dict==1.2.0
+lxml==5.3.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+mistralai==1.8.2
+motor==3.7.0
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+networkx==3.4.2
+numpy==2.2.3
+openpyxl==3.1.5
+orjson==3.10.15
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+parsimonious==0.9.0
+passlib==1.7.4
+pdf2image==1.17.0
+pdfminer.six==20231228
+pdfplumber==0.11.5
+pillow==11.1.0
+pinecone==6.0.1
+pinecone-plugin-interface==0.0.7
+propcache==0.3.0
+proto-plus==1.26.1
+protobuf==5.29.3
+py-ecc==8.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pyasynchat==1.0.4
+pyasyncore==1.0.4
+pycparser==2.22
+pycryptodome==3.23.0
+pydantic==2.11.7
+pydantic-settings==2.8.1
+pydantic_core==2.33.2
+pyftpdlib==2.0.1
+Pygments==2.19.2
+pymongo==4.11.2
+pyparsing==3.2.1
+pypdfium2==4.30.1
+PySocks==1.7.1
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-dotenv==1.1.1
+python-jose==3.3.0
+python-multipart==0.0.20
+pytz==2025.1
+pyunormalize==16.0.0
+PyYAML==6.0.2
+redis==6.2.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==14.0.0
+rlp==4.1.0
+rpds-py==0.25.1
+rsa==4.9
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+selenium==4.32.0
+sentence-transformers==3.4.1
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.38
+starlette==0.46.1
+sympy==1.13.3
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tokenizers==0.21.0
+toolz==1.0.0
+torch==2.2.2
+tqdm==4.67.1
+transformers==4.49.0
+trio==0.30.0
+trio-websocket==0.12.2
 tronpy==0.4.0
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.1
+uritemplate==4.1.1
+urllib3==2.3.0
+uvicorn==0.34.0
 web3==6.15.1
+websocket-client==1.8.0
+websockets==15.0.1
+wsproto==1.2.0
+yarl==1.18.3
+zstandard==0.23.0
